# ftx-transfer-fail-example

./: .gitignore  Cargo.toml
src/: main.rs
