[package]
name = "ftx-fail-example"
version = "0.1.0"
authors = ["Sibz <12050358+Sibz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "*"
hex = "*"